--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "express-basic-auth": "^1.2.1"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   },
-  "keywords": ["typing", "game", "multiplayer", "leaderboard"],
+  "keywords": [
+    "typing",
+    "game",
+    "multiplayer",
+    "leaderboard"
+  ],
   "author": "",
   "license": "MIT"
-} 
+}
